[package]
name = "claptest"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
panic = 'abort'


[dependencies]
colored = "2.0.0"
regex = "1.7.0"
sha256 = "1.1.1"
semver = "1.0.14"
walkdir = "2.3.2"
toml = "0.5.9"
[dependencies.clap]
version = "4.0.29"
features = ["cargo"]

[build-dependencies]
built = "0.5.2"




