[package]
name = "imosid"
version = "0.0.1"
edition = "2021"
build = "build.rs"
authors = ["paperbenni <paperbenni@gmail.com>"]
license = "GPL-2.0"
description = "a config file manager that leaves the user alone"
documentation = "https://instantos.io/docs"
repository = "https://github.com/instantOS/imosid"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
panic = 'abort'


[dependencies]
colored = "2.0.0"
regex = "1.7.0"
sha256 = "1.1.1"
semver = "1.0.14"
walkdir = "2.3.2"
toml = "0.5.9"
tempdir = "0.3.7"
home = "0.5.5"

[dependencies.clap]
version = "4.0.29"
features = ["cargo"]

[build-dependencies]
built = "0.5.2"




